# code-bm

./: .gitignore  AGENTS.md  LICENSE  README.md  Taskfile.yml  code_quality.md  initial-setup.sh  initial.sh
.github/workflows/: ci.yml
backend/: .coverage  .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_empty_schema.py  0002_initial_schema.py  0003_fts5.py  1ef21e7a7836_fts5.py  552a93cdaa62_initial_schema.py  96f81c1ff1b8_001_initial_empty.py
backend/database/: raidio.db
backend/raidio/: __init__.py  main.py
backend/raidio/api/: __init__.py  admin.py  catalog.py  queue.py  scan.py  tracks.py  ws_now_playing.py
backend/raidio/core/: __init__.py  auth.py  names.py  now_playing.py  scheduler.py  test_auth.py  test_scheduler.py
backend/raidio/db/: base.py  bootstrap.py  fts.py  models.py  session.py  settings.py  test_fts.py
backend/raidio/scanner/: audio_analysis.py  cover_cache.py  library_scanner.py  tags.py  test_audio_analysis.py  test_tags.py  test_walker.py  walker.py
backend/raidio/streaming/: broadcaster.py  liquidsoap.py  test_liquidsoap.py
backend/tests/: conftest.py  test_admin_api.py  test_audio_analysis.py  test_auth.py  test_catalog_api.py  test_cover_cache.py  test_fts.py  test_integration.py  test_liquidsoap.py  test_names.py  test_placeholder.py  test_queue_api.py  test_round_robin.py  test_scan_api.py  test_scheduler.py  test_tags.py  test_walker.py
docs/: DESIGN.md  IMPLEMENT.md  PRD.md  deployment.md  index.md  playlist-format.md
frontend/: README.md  eslint.config.js  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  app.test.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  adminAuth.ts  client.ts  fts.test.ts  hooks.ts  test_tracks.test.tsx  tracks.ts
frontend/src/components/: AdminAutoPlaylists.tsx  AdminDashboard.tsx  AdminQueue.tsx  AdminRoute.tsx  AdminScanPanel.tsx  AdminSettings.tsx  ErrorBoundary.tsx  FilterSidebar.tsx  NowPlaying.tsx  PlayerAudio.tsx  PlaylistBuilder.tsx  ThemeToggle.tsx  TrackTable.test.tsx  TrackTable.tsx  Visualizer.tsx
frontend/src/lib/: names.ts  theme.ts
frontend/src/pages/: AdminDashboard.tsx  AdminLoginPage.tsx  AdminPage.tsx  AdminQueue.tsx  AdminScanPanel.tsx  AdminSettings.tsx  BrowsePage.tsx  CreatePage.tsx  PlayerPage.tsx  PlaylistBuilder.tsx
frontend/src/stores/: adminAuthStore.ts  adminScanStore.ts  (+2 more)
liquidsoap/: icecast.xml  raidio.liq
research/: prompt-agents-init.md  prompt-implement.txt  prompt-prod-design.txt  prompt-readme.txt  prompt-setup.txt
(+4 files in other folders)
